Fix CSS overflow property for body element

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,7 +23,7 @@ html {
     overflow-y: hidden;
     padding-top: 5px;
 }
-body{
+* {
     overflow-y:hidden;
 }
 
